[metadata]
keywords = python utility shell git git-workspace tkinter
description = manage a multi git workspace

long_description = file: README.md, CHANGELOG.md, BACKLOG.md, LICENSE.md
long_description_content_type = text/markdown

license = AGPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Environment :: Other Environment
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Desktop Environment
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)


[options.extras_require]
PEP08 = 
    pycodestyle
    flake8
    autopep8

PEP08_BLACK = 
    pycodestyle
    flake8
    black

PEP08_FULL = 
    pycodestyle
    flake8
    autopep8
    black
    yapf
    
MELD = 
    meld

DEFAULT = 
    pycodestyle
    flake8
    autopep8
    meld

